istio/demo/virtual-service-recommendation-v1_and_v2_50_50.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
      weight: 50
    - destination:
        host: recommendation
        subset: v2
      weight: 50
---
