istio/demo/virtual-service-recommendation-v2_retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer 
spec:
  hosts:
  - customer
  http:
  - route:
    - destination:
        host: customer
        subset: customer
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: preference
spec:
  hosts:
  - preference
  http:
  - route:
    - destination:
        host: preference
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
      weight: 50
    - destination:
        host: recommendation
        subset: v2
      weight: 50
    retries:
      attempts: 3
      perTryTimeout: 1s
---
